서브모듈 업데이트

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "mve-login-server"]
 	path = mve-login-server
 	url = https://github.com/prayslaks/mve-login-server.git
+	branch = main
 [submodule "mve-resource-server"]
 	path = mve-resource-server
 	url = https://github.com/prayslaks/mve-resource-server.git
+	branch = main
